Add Week2/FormLetterWriter.java Modify makefile
Signed-off-by: Jesang-Limbu <LimbuJesang@gmail.com>

--- a/Week2/makefile
+++ b/Week2/makefile
@@ -1,3 +1,6 @@
+FormLetterWriter.class: FormLetterWriter.java
+	javac FormLetterWriter.java
+
 NumbersDemo.class: NumbersDemo.java
 	javac NumbersDemo.java
 
