Add Week2/Team.java and Week2/TestTeam.java Modify makefile
Signed-off-by: Jesang-Limbu <LimbuJesang@gmail.com>

--- a/Week2/makefile
+++ b/Week2/makefile
@@ -1,3 +1,9 @@
+TestTeam.class: TestTeam.java Team.java
+	javac TestTeam.java
+
+Team.class: Team.java
+	javac Team.java
+
 TestLease.class: TestLease.java
 	javac TestLease.java
 
