Add Week2/Game.java and Week2/TestGame.java Modify makefile, Week2/Team.java and Week2/TestTeam.java
Signed-off-by: Jesang-Limbu <LimbuJesang@gmail.com>

--- a/Week2/makefile
+++ b/Week2/makefile
@@ -1,3 +1,9 @@
+TestGame.class: Game.java TestGame.java
+	javac TestGame.java
+
+Game.class: Game.java
+	javac Game.java
+
 TestTeam.class: TestTeam.java Team.java
 	javac TestTeam.java
 
