Add Week3/Apartment.java Add Week3/TestApartments.java
Signed-off-by: Jesang Limbu <LimbuJesang@gmail.com>

--- a/Week3/makefile
+++ b/Week3/makefile
@@ -1,3 +1,10 @@
+TestApartments.class: Apartment.java TestApartments.java
+	javac Apartment.java
+	javac TestApartments.java
+
+Apartment.class: Apartment.java
+	javac Apartment.java
+
 AscendingAndDescending.class: AscendingAndDescending.java
 	javac AscendingAndDescending.java
 
